kubernetes/deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: tt
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: tt-container
          image: mchipi/timelesstreasures:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
